--- a/style.css
+++ b/style.css
@@ -7,29 +7,32 @@ body {
     
 }
 
+#header {
+    text-align: center;
+    font-size: 1em;
+    background-color: #b4e2ec;
+    padding: 0.9em 0;
+    margin: 0pt 0pt 10pt 0pt;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3.2em;
+}
+
+#content {
+    padding: 1em;
+}
+
 figure {
     width: 20em;
     height: auto;
     float: right;
-
     padding: 1em 1em 3em 1em;
     border: 1px solid silver;
     margin: 0 2em 2em 2em;    
     box-shadow: 10px 0px 25px #555;
     transform: rotate(1deg);
-}
-
-figcaption {
-    text-align: justify;
-    text-align-last: center;
-}
-
-h1 {
-    text-align: center;
-    font-size: 3.5em;
-    background-color: #d2f5fc;
-    padding: 0.9em 0;
-    margin: 0pt 0pt 10pt 0pt;
 }
 
 img {
@@ -38,8 +41,19 @@ img {
     float: right; 
     top: 10px; 
     right: 10px;
-  }
+}
+
+figcaption {
+    text-align: justify;
+    text-align-last: center;
+}
+
+h2 {
+    margin: 2em 1em 0pt 0pt;
+    text-align: center;
+}
 
 #hide_button {
     display: none;
 }
+
